# Compiler

./: .gitignore  8queens.in  CMakeLists.txt  LICENSE.md  README.md
.github/ci-configs/: CSMachineConfig.json  InternalTestsCSMachineConfig.json
.github/workflows/: test.yml
MeetingNotes/: ProjectReviewMeetingNotes  ProjectReviewMeetingNotes-Example  ScrumMeetingNotes  ScrumMeetingNotes-Example
grammar/: Gazprea.g4  GazpreaOld.g4
include/: AST.h  ASTBuilder.h  ASTNode.h  ASTWalker.h  AdvanceType.h  AliasErrorWalker.h  BackEnd.h  BackendWalker.h  BaseScope.h  BuiltInTypeSymbol.h  CallErrorWalker.h  CompileTimeExceptions.h  ContextedWalker.h  Def.h  ProcedureCallArgWalker.h  Ref.h  Scope.h  ScopedSymbol.h  Swap.h  Symbol.h  SymbolTable.h  SyntaxWalker.h  Type.h  TypeWalker.h  WalkerContext.h
include/ASTNode/: ASTNode.h  ArgNode.h  AssignNode.h  BreakNode.h  CallNode.h  ContinueNode.h  DeclNode.h  FunctionCallNode.h  PrintNode.h  TypeDefNode.h  TypeNode.h  funcCallNode.h
include/ASTNode/Block/: BlockNode.h  ConditionalNode.cpp  ConditionalNode.h  FunctionNode.h  LoopNode.cpp  LoopNode.h  ProcedureNode.h
include/ASTNode/Expr/: CastNode.h  ExprListNode.h  ExprNode.h  IDNode.h  IdentityNode.h  IntNode.h  NullNode.h  StdInputNode.h  TupleIndexNode.h
include/ASTNode/Expr/Binary/: BinaryExpr.h  RangeVecNode.h
include/ASTNode/Expr/Literal/: BoolNode.h  CharNode.h  IDNode.h  IntNode.h  MatrixNode.h  RealNode.h  StringNode.h  TupleNode.h  VectorNode.h
include/ASTNode/Expr/Unary/: UnaryExpr.cpp  UnaryExpr.h
include/ASTNode/Expr/Vector/: BaseVectorExpr.h  FilterNode.h  GeneratorNode.h  RangeVecNode.h
include/ASTNode/Loop/: InfiniteLoopNode.h  IteratorLoopNode.h  LoopNode.h  PostPredicatedLoopNode.h  PredicatedLoopNode.h
include/ASTNode/Method/: FunctionNode.h  ProcedureCallNode.h  ProcedureNode.h  ReturnNode.h
include/ASTNode/Stream/: StreamIn.h  StreamOut.h
include/ASTNode/Type/: MatrixTypeNode.h  StringTypeNode.h  TupleTypeNode.h  TypeNode.h  VectorTypeNode.h
include/BuiltinTypes/: BuiltInTypes.h
include/FunctionCallTypes/: FuncCallType.h
include/Operands/: BINOP.h  UNARYOP.h
include/Types/: QUALIFIER.h  TYPES.h
include/block/: callable.h  function.h  procedure.h
include/customError/: ErrorListener.h
internal_tests/input-stream/lord-farquaad/stream/: absurd-int-overflow.ins  stream_boolean.ins  streamin_integer.ins  streamstate_boolean.ins  streamstate_integer.ins
internal_tests/input/lord-farquaad/: CharAndBoolGenerator.in  assignInvalidPromotion.in  assignTypeCheckConst.in  conditional-long.in  continue-outside-loop.in  copies.in  declareInferredSyntaxError.in  declareTupleInvalidAssignment.in  declareTupleInvalidPromotion.in  dynamicMatrices.in  dynamicVectors.in  empty-return.in  emptyConcat.in  emptyDecl.in  filter.in  forwardDeclDiffArgNames.in  forwardDeclRedeclarationErr.in  forwardDeclRefBeforeDeclError.in  forwardDeclaration.in  generators.in  incorrectLvalueAssignError.in  index.in  int_vec.in  literalError.in  long-conditional.in  loop-1-to-10.in  loop-3x3-square.in  matrixArithmetic.in  methodDeclDefArgMismatchError.in  nonTupleUnpackError.in  nullConcat.in  nullidentityCast.in  padding.in  paddingWithVariables.out  passByReference.in  rangeVec.in  ranges.in  returnError.in  scalarReturnError.in  scoping1.in  (+20 more)
internal_tests/input/lord-farquaad/aliasing-errs/: canonical-1.in  (+5 more)
internal_tests/output/: .gitkeep  assign-err-const-into-var-arg.out  padding.out
internal_tests/output/lord-farquaad/: CharAndBoolGenerator.out  assignInvalidPromotion.out  assignTypeCheckConst.out  concat.out  copies.out  dynamicMatrices.out  dynamicVectors.out  empty-return.out  emptyConcat.out  emptyDecl.out  forwardDeclRefBeforeDeclError.out  generators.out  index.out  int_vec.out  literalError.out  matrixArithmetic.out  methodDeclDefArgMismatchError.out  nullConcat.out  paddingWithVariables.in  rangeVec.out  ranges.out  returnError.out  scoping1.out  scoping2.out  simple-loops.out  stdin-basic-types.out  stdout-escape-sequences.out  tupleAssignInvalidAssignment.out  tupleCasting.out  tupleIndex.out  tupleUnpackInvalidAssignment.out  unreachableCode.out  vec_vec.out  vectorArithmetic.out  vectorUnary.out
runtime/include/: run_time_errors.h
runtime/src/: CMakeLists.txt  Makefile  cmake_install.cmake  placeholder.c  runtimeCasting.c  runtimeMain.c  runtimeMemory.c  runtimeOperations.c  runtimeStream.c
src/: AST.cpp  ASTBuilder.cpp  ASTWalker.cpp  AliasErrorWalker.cpp  BackEnd.cpp  BackendWalker.cpp  BaseScope.cpp  CMakeLists.txt  CallErrorWalker.cpp  ContextedWalker.cpp  Def.cpp  DefRef.cpp  Makefile  ProcedureCallArgWalker.cpp  Ref.cpp  ScopedSymbol.cpp  Swap.cpp  Symbol.cpp  SymbolTable.cpp  SyntaxWalker.cpp  TypeWalker.cpp  WalkerContext.cpp  cmake_install.cmake  main.cpp
src/ASTNode/: ASTNode.cpp  ArgNode.cpp  AssignNode.cpp  BreakNode.cpp  ContinueNode.cpp  DeclNode.cpp  PrintNode.cpp  TypeDefNode.cpp  TypeNode.cpp
src/ASTNode/Block/: BlockNode.cpp  ConditionalNode.cpp  FunctionNode.cpp  LoopNode.cpp  ProcedureNode.cpp
src/ASTNode/Expr/: ExprListNode.cpp  IDNode.cpp  IdentityNode.cpp  IntNode.cpp  NullNode.cpp
src/ASTNode/Expr/Binary/: BinaryExpr.cpp  RangeVecNode.cpp
src/ASTNode/Expr/Literal/: BoolNode.cpp  CharNode.cpp  IDNode.cpp  IntNode.cpp  MatrixNode.cpp  RealNode.cpp  StringNode.cpp  TupleNode.cpp  VectorNode.cpp
src/ASTNode/Expr/Unary/: UnaryExpr.cpp
src/ASTNode/Expr/Vector/: FilterNode.cpp  GeneratorNode.cpp  RangeVecNode.cpp
src/ASTNode/Loop/: InfiniteLoopNode.cpp  IteratorLoopNode.cpp  LoopNode.cpp  PostPredicatedLoopNode.cpp  PredicatedLoopNode.cpp
src/ASTNode/Method/: FunctionNode.cpp  ProcedureNode.cpp
src/ASTNode/Stream/: StreamIn.cpp  StreamOut.cpp
src/ASTNode/Type/: MatrixTypeNode.cpp  StringTypeNode.cpp  TupleTypeNode.cpp  TypeNode.cpp  VectorTypeNode.cpp
src/FunctionCallTypes/: FuncCallType.cpp
tests/input/lord-farquaad/: casting.in  declareInvalidPromotion.in  tupleInvalidIndexAssignment.in  tupleUnpackInvalidPromotion.in
tests/output/lord-farquaad/: casting.out  tupleIndexInvalidIdentifier.out
(+293 files in other folders)
